<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/textViewNombApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewApp"
        android:layout_alignParentTop="true"
        android:text="@string/nombre"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewAppVersion"
        android:layout_below="@+id/textViewNombApp"
        android:layout_marginTop="14dp"
        android:text="@string/app_name"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewVersion"
        android:layout_below="@+id/textViewApp"
        android:layout_marginTop="23dp"
        android:text="@string/app_version"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewAppVersion"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="14dp"
        android:text="@string/version"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15sp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/descripcion"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>