<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/background_dark" >   

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="15sp"
        android:text="@string/artistas"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textViewEstilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="15sp"
        android:text="@string/estilo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textViewEnlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="15sp"
        android:text="@string/enlaces"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <ListView
        android:id="@+id/listViewArtistas"
        style="@style/list_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewNombre" >

    </ListView>

</RelativeLayout>