<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_dark" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewEnl3"
        android:layout_alignLeft="@+id/imageView1"
        android:contentDescription="@string/img_enl2"
        android:src="@drawable/boton_speaker" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewEnl2"
        android:layout_alignLeft="@+id/imageView2"
        android:contentDescription="@string/img_enl3"
        android:src="@drawable/boton_speaker" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewEnl1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/img_enl1"
        android:src="@drawable/boton_speaker" />

    <TextView
        android:id="@+id/textViewEnl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewEnl3"
        android:layout_centerVertical="true"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textViewEnl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView3"
        android:layout_alignLeft="@+id/textViewEnl1"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textViewEnl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="52dp"
        android:layout_marginLeft="51dp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

</RelativeLayout>